added all the bits for AUTH apart from tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,20 +23,18 @@ play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 # Primary entry point for all HTTP requests on Play applications
 play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
 
-# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
-# An audit connector must be provided.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
-
-# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
-# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
+play.modules.enabled += "config.ModuleBindings"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.frontend.FrontendModule"
+
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.frontend.FrontendModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.frontend.filters.FrontendFilters"
 
 # Default http client
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
 # Custom error handler
 play.http.errorHandler = "config.ErrorHandler"
@@ -72,6 +70,17 @@ microservice {
       host = localhost
       port = 9250
     }
+
+    auth {
+      host = localhost
+      port = 8500
+    }
+
+    enrolment-store-proxy {
+      host = localhost
+      port = 7775
+    }
+
   }
 }
 
@@ -102,4 +111,9 @@ google-analytics {
 
 footerLinkItems = ["cookies", "privacy", "termsConditions", "govukHelp"]
 
-
+urls {
+  login = "http://localhost:9949/auth-login-stub/gg-sign-in"
+  signOut = "http://localhost:9025/gg/sign-out"
+  loginContinue = "http://localhost:7950/import-voluntary-disclosure"
+  agentServicesNoClientUrl = "/paye"
+}
