added all the tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -109,7 +109,7 @@ google-analytics {
   host = auto
 }
 
-footerLinkItems = ["cookies", "privacy", "termsConditions", "govukHelp"]
+footerLinkItems = ["cookies", "privacy", "termsConditions", "govukHelp", "testLink"]
 
 urls {
   login = "http://localhost:9949/auth-login-stub/gg-sign-in"
