--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,11 +76,6 @@ microservice {
       port = 8500
     }
 
-    enrolment-store-proxy {
-      host = localhost
-      port = 7775
-    }
-
   }
 }
 
@@ -90,7 +85,7 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
-  enabled = true
+  enabled = false
 }
 
 auditing {
@@ -115,5 +110,4 @@ urls {
   login = "http://localhost:9949/auth-login-stub/gg-sign-in"
   signOut = "http://localhost:9025/gg/sign-out"
   loginContinue = "http://localhost:7950/import-voluntary-disclosure"
-  agentServicesNoClientUrl = "/paye"
 }
