Added UserAnswers storage and retrieval mechanism

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -111,3 +111,8 @@ urls {
   signOut = "http://localhost:9025/gg/sign-out"
   loginContinue = "http://localhost:7950/import-voluntary-disclosure"
 }
+
+mongodb {
+  uri = "mongodb://localhost:27017/"${appName}
+  timeToLiveInSeconds = 1800
+}
