--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2020 HM Revenue & Customs
+# Copyright 2021 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -65,17 +65,15 @@ microservice {
   }
 
   services {
-    contact-frontend {
-      protocol = http
-      host = localhost
-      port = 9250
-    }
-
     auth {
       host = localhost
       port = 8500
     }
 
+    address-lookup-frontend {
+      host = localhost
+      port = 9028
+    }
   }
 }
 
@@ -86,6 +84,16 @@ metrics {
   showSamples = true
   jvm = true
   enabled = false
+}
+
+contact-frontend {
+  host = "http://localhost:9250"
+  service-identifier = "import-voluntary-disclosure"
+}
+
+feedback-frontend {
+  host = "http://localhost:9514"
+  url = "/feedback"
 }
 
 auditing {
@@ -109,7 +117,14 @@ footerLinkItems = ["cookies", "privacy", "termsConditions", "govukHelp", "testLi
 urls {
   login = "http://localhost:9949/auth-login-stub/gg-sign-in"
   signOut = "http://localhost:9025/gg/sign-out"
-  loginContinue = "http://localhost:7950/disclose-import-taxes-underpayment"
+  loginContinue = "http://localhost:7950/import-voluntary-disclosure"
+  host = "http://localhost:7950"
+  addressLookupInitialiseUri = "/api/v2/init"
+  addressLookupConfirmedUri = "/api/confirmed"
+}
+
+timeout {
+  period = 900
 }
 
 mongodb {
