CIVDT-53: Create supporting documentation page (#18)
* supporting Doc page with unit tests
* Updated views to stop coverage of generated code
* Updated config driven markup generation

Co-authored-by: macgrewal <7713555+macgrewal@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -123,6 +123,11 @@ urls {
   addressLookupConfirmedUri = "/api/confirmed"
 }
 
+uploads {
+    allowedFileTypes = ["DOC", "JPG", "PDF", "PNG", "XLS"]
+    maxFileSize = 30 # size in MB
+}
+
 timeout {
   period = 900
 }
