--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,7 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.frontend.filters.FrontendFilters
 # Custom error handler
 play.http.errorHandler = "config.ErrorHandler"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
+play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
 
 # Play Modules
 # ~~~~
@@ -68,6 +68,11 @@ microservice {
     auth {
       host = localhost
       port = 8500
+    }
+
+    upscan-initiate {
+      host = localhost
+      port = 9570
     }
 
     address-lookup-frontend {
@@ -125,7 +130,19 @@ urls {
 
 uploads {
     allowedFileTypes = ["DOC", "JPG", "PDF", "PNG", "XLS"]
+    mustIncludeFiles = ["The original C88","The original E2","Amendment substitute entry / worksheet"]
+    mayIncludeFiles = ["Amendment C88","Amendment E2","Invoice","Airway Bill","Preference certificate"]
     maxFileSize = 30 # size in MB
+}
+
+upscan {
+  callbackUrlForSuccessOrFailureOfFileUpload = "http://localhost:7950/internal/call-back-from-upscan"
+  successRedirectForUser = "/disclose-import-taxes-underpayment/disclosure/upload-file/upscan-response"
+  errorRedirectForUser = "/disclose-import-taxes-underpayment/disclosure/upload-file/upscan-response"
+  minFileSize = 1
+  maxFileSize = 10485760
+  fileRepositoryTtl = 86400
+  upScanPollingDelayMilliSeconds = 1000
 }
 
 timeout {
@@ -135,4 +152,11 @@ timeout {
 mongodb {
   uri = "mongodb://localhost:27017/"${appName}
   timeToLiveInSeconds = 1800
+}
+
+mongo-async-driver {
+  akka {
+    log-dead-letters-during-shutdown = off
+    log-dead-letters = 0
+  }
 }
