CIVDT-196: Stubbing out trader address call to SUB09 (#36)
CIVDT-196: Stubbing out trader address call to SUB09

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,6 +79,12 @@ microservice {
       host = localhost
       port = 9028
     }
+
+    import-voluntary-disclosure-submission {
+      host = localhost
+      port = 7951
+    }
+
   }
 }
 
@@ -125,7 +131,6 @@ urls {
   loginContinue = "http://localhost:7950/disclose-import-taxes-underpayment"
   host = "http://localhost:7950"
   addressLookupInitialiseUri = "/api/v2/init"
-  addressLookupConfirmedUri = "/api/confirmed"
 }
 
 uploads {
