implementing the cookie consent

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,13 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.frontend.filters.FrontendFilters
 # Custom error handler
 play.http.errorHandler = "config.ErrorHandler"
 
-play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
+
+tracking-consent-frontend {
+  gtm.container = "a"
+  url = "http://localhost:12345/tracking-consent/tracking.js"
+}
+
+play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 www.google-analytics.com data:"
 
 # Play Modules
 # ~~~~
