cleaning up the configuration file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,10 +42,9 @@ play.http.errorHandler = "config.ErrorHandler"
 
 tracking-consent-frontend {
   gtm.container = "a"
-  url = "http://localhost:12345/tracking-consent/tracking.js"
 }
 
-play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 www.google-analytics.com data:"
+play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:12345 www.google-analytics.com data:"
 
 # Play Modules
 # ~~~~
