--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,7 +41,7 @@ play.http.errorHandler = "config.ErrorHandler"
 
 
 tracking-consent-frontend {
-  gtm.container = "a"
+  gtm.container = "b"
 }
 
 play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:12345 www.google-analytics.com data:"
