--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,6 +90,11 @@ microservice {
       port = 7951
     }
 
+    import-voluntary-disclosure-stub {
+      host = localhost
+      port = 7952
+    }
+
   }
 }
 
@@ -162,6 +167,10 @@ timeout {
 mongodb {
   uri = "mongodb://localhost:27017/"${appName}
   timeToLiveInSeconds = 1800
+}
+
+features {
+  retrieveAddressFromStub = true
 }
 
 mongo-async-driver {
