CSP now specified against correct config key (#110)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,12 +39,7 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.frontend.filters.FrontendFilters
 # Custom error handler
 play.http.errorHandler = "config.ErrorHandler"
 
-
-tracking-consent-frontend {
-  gtm.container = "b"
-}
-
-play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:12345 www.google-analytics.com data:"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:12345 www.google-analytics.com www.googletagmanager.com tagmanager.google.com data:"
 
 # Play Modules
 # ~~~~
@@ -110,6 +105,10 @@ contact-frontend {
 feedback-frontend {
   host = "http://localhost:9514"
   url = "/feedback"
+}
+
+tracking-consent-frontend {
+  gtm.container = "b"
 }
 
 auditing {
