--- a/conf/application.conf
+++ b/conf/application.conf
@@ -104,7 +104,7 @@ contact-frontend {
 
 feedback-frontend {
   host = "http://localhost:9514"
-  url = "/feedback"
+  url = "/feedback/ivd"
 }
 
 tracking-consent-frontend {
