app config refactor

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,6 +80,16 @@ microservice {
       port = 9028
     }
 
+    contact-frontend {
+      host = localhost
+      port = 9250
+    }
+
+    feedback-frontend {
+      host = localhost
+      port = 9514
+    }
+
     import-voluntary-disclosure-submission {
       host = localhost
       port = 7951
@@ -98,12 +108,10 @@ metrics {
 }
 
 contact-frontend {
-  host = "http://localhost:9250"
   service-identifier = "import-voluntary-disclosure"
 }
 
 feedback-frontend {
-  host = "http://localhost:9514"
   url = "/feedback/ivd"
 }
 
