Upload Authority feature

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -148,6 +148,8 @@ upscan {
   callbackUrlForSuccessOrFailureOfFileUpload = "http://localhost:7950/internal/call-back-from-upscan"
   successRedirectForUser = "/disclose-import-taxes-underpayment/disclosure/upload-file/upscan-response"
   errorRedirectForUser = "/disclose-import-taxes-underpayment/disclosure/upload-file/upscan-response"
+  authoritySuccessRedirectForUser = "/disclose-import-taxes-underpayment/disclosure/upload-deferment-authority/upscan-response"
+  authorityErrorRedirectForUser = "/disclose-import-taxes-underpayment/disclosure/upload-deferment-authority/upscan-response"
   minFileSize = 1
   maxFileSize = 10485760
   fileRepositoryTtl = 86400
