added feaature to stub address lookup for perf tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,6 +85,10 @@ microservice {
       port = 7951
     }
 
+    import-voluntary-disclosure-stub {
+      host = localhost
+      port = 7952
+    }
   }
 }
 
@@ -166,6 +170,10 @@ timeout {
 mongodb {
   uri = "mongodb://localhost:27017/"${appName}
   timeToLiveInSeconds = 1800
+}
+
+features {
+  retrieveAddressFromStub = true
 }
 
 mongo-async-driver {
